tests/snapshots/run_wpt_conformance__litert_cast_float_to_integer_overflows.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
mlNumber.https.any.js cast float to integer overflows, litert
 Failed to convert graph: graph conversion failed for litert: unsupported operation: Clamp { input: 0, options: Some(MLClampOptions { label: "", min_value: Some(Number(1000)), max_value: None }), outputs: [1] }

--- built graph ---
webnn_graph "graph" v2 {
  consts {
    operand_0: u8[4] @bytes([255, 127, 5, 0]);
  }

  nodes {
    [clampOutput] = clamp(operand_0, label="", maxValue=null, minValue=1000);
  }

  outputs { clampOutput; }
}
