tests/snapshots/run_wpt_conformance__litert_cast_float_to_integer_underflows.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "mlNumber.https.any.js",
    "cast float to integer underflows",
    "litert",
    "PASS",
)
